--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@font-face {
+  font-family: 'Poppins';
+  src: url(../assets/fonts/Poppins-Regular.ttf);
+}
 #app {
   max-width: 1280px;
   margin: 0 auto;
